# wanted-test

./: Makefile-local.mk  README.md
infra/: docker-compose-local.yaml
infra/sample/: insert_company_infos.py  wanted_temp_data.csv
postman/: Makefile-local.mk  case_01_rest_api_test.sh
postman/collection/: WantedRestApiTest.postman_collection.json
rest_api_service/: .dockerignore  Dockerfile  Makefile-local.mk  docker-compose-local.yaml  pyproject.toml  swagger.yaml
rest_api_service/rest_api_service/: config.py  main.py
rest_api_service/rest_api_service/api/: app.py
rest_api_service/rest_api_service/api/common/: enumeration.py  error.py  logging.py
rest_api_service/rest_api_service/api/models/: post_dao.py
rest_api_service/rest_api_service/api/services/: post_service.py
rest_api_service/rest_api_service/api/views/v1/: ping.py  post.py  validation.py
rest_api_service/rest_api_service/nginx/: default.conf
